--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Connect"
   avatar           : "/images/georgeOrfanidis.jpg" #path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : 
+  bio              : "                          "
   location         : "Rock Hill, SC"
   email            :
   links:
