--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,12 @@ title                    : "George Orfanidis"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "George Orfanidis"
-description              : "An amazing website."
+description              : 
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/images/georgeOrfanidis.jpg" 
+logo                     :  
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
